kubernetes/apps/flux-system/weave-gitops/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.oxygn.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
spec:
  hostnames: ["gitops.oxygn.dev"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: weave-gitops
          namespace: flux-system
          port: 9001
